--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babil",
-  "version": "0.4.7",
+  "version": "0.4.9",
   "description": "Babil transpiles all your dependencies without needing grunt or gulp.",
   "main": "index.js",
   "scripts": {
@@ -27,9 +27,8 @@
   "homepage": "https://github.com/jsbites/babil#readme",
   "dependencies": {
     "mkdirp": "^0.5.1",
-    "walk": "^2.3.9"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.7.5"
+    "walk": "^2.3.9",
+    "babel-cli": "^6.7.5",
+    "babel-preset-es2015": "^6.9.0"
   }
 }
