--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babil",
-  "version": "0.4.11",
+  "version": "0.5.0",
   "description": "Babil transpiles all your dependencies without needing grunt or gulp.",
   "main": "index.js",
   "scripts": {
@@ -27,13 +27,13 @@
   },
   "homepage": "https://github.com/jsbites/babil#readme",
   "dependencies": {
-    "mkdirp": "0.6.0",
+    "mkdirp": "0.5.1",
     "walk": "2.3.9",
     "babel-cli": "6.7.5",
     "babel-preset-es2015": "6.9.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "7.1.1",
     "eslint": "3.13.1",
     "eslint-config-jsbites": "0.3.1",
     "eslint-plugin-babel": "4.0.0"
