--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "es2015",
     "javascript"
   ],
-  "author": "Volkan Ozcelik",
+  "author": "Volkan Özçelik <me@volkan.io> (https://volkan.io/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jsbites/babil/issues"
