--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+#  ____    __    ____  ____  __
+# (  _ \  /__\  (  _ \(_  _)(  )
+#  ) _ < /(__)\  ) _ < _)(_  )(__
+# (____/(__)(__)(____/(____)(____)
+#
+# This project is a part of the “Byte-Sized JavaScript” videocast.
+#
+# You can watch “Byte-Sized JavaScript” at: https://bit.ly/bytesized
+#
+# MIT Licensed — See LICENSE.md
+#
+# Send your comments, suggestions, and feedback to me@volkan.io
+#
+
 # Logs
 logs
 *.log
@@ -34,6 +48,7 @@ node_modules
 
 # IDE
 .idea
+.c9
 
 # Mac
 .DS_Store
