--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "babil",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Babil transpiles all your dependencies without needing grunt or gulp.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "lint": "bin/lint.sh"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jsbites/babil.git"
-  },
+  "repository": "git+https://github.com/jsbites/babil.git",
   "keywords": [
     "transpile",
     "babil",
@@ -27,10 +24,10 @@
   },
   "homepage": "https://github.com/jsbites/babil#readme",
   "dependencies": {
-    "mkdirp": "0.5.1",
-    "walk": "2.3.9",
     "babel-cli": "6.7.5",
-    "babel-preset-es2015": "6.9.0"
+    "babel-preset-es2015": "6.9.0",
+    "mkdirp": "0.5.1",
+    "walk": "2.3.9"
   },
   "devDependencies": {
     "babel-eslint": "7.1.1",
