--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babil",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "description": "Babil transpiles all your dependencies without needing grunt or gulp.",
   "main": "index.js",
   "scripts": {
@@ -13,14 +13,21 @@
     "babil",
     "byte-sized javascript",
     "byte-sized",
+    "bytesized-javascript",
     "bytesized.tv",
+    "demos",
     "ecmascript",
     "es.next",
     "es2015",
     "javascript",
     "podcast",
     "screencast",
-    "transpile"
+    "trainings",
+    "transpile",
+    "tutorials",
+    "vidcast",
+    "videocast",
+    "videos"
   ],
   "author": "Volkan Özçelik <me@volkan.io> (https://volkan.io/)",
   "license": "MIT",
